changed configurations